1.0.4  2020-11-21
       - Object states with scripts weren't being handled.
       - Better handling of duplicate GUIDs.

1.0.3  2020-11-21
       - Updated dependencies. Made adjustments for new lint rules.

1.0.2  2020-11-17
       - Trivial documentation improvement.

1.0.1  2020-11-16
       - Ensure a consistent order for duplicate notebook entries.
       - Additional tests.

1.0.0  2020-11-16
       - Initial version.